--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-navigation": "4.4.3"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "7.9.6"
   },
   "private": true
 }
